--- a/app/styles.scss
+++ b/app/styles.scss
@@ -585,6 +585,10 @@ blockquote {
     font-weight: normal;
 }
 
+.toast-info {
+    background-color: $lightBlue;
+}
+
 .fa-cc-paypal {
     color: blue;
 }
