--- a/app/styles.css
+++ b/app/styles.css
@@ -537,6 +537,9 @@ blockquote {
 .toast-info {
   background-color: #00aeef; }
 
+.toast-warning {
+  background-color: #fdb813; }
+
 .fa-cc-paypal {
   color: blue; }
 
