--- a/app/styles.scss
+++ b/app/styles.scss
@@ -589,6 +589,10 @@ blockquote {
     background-color: $lightBlue;
 }
 
+.toast-warning {
+    background-color: $orange;
+}
+
 .fa-cc-paypal {
     color: blue;
 }
