--- a/app/styles.css
+++ b/app/styles.css
@@ -454,6 +454,12 @@ body {
   opacity: 0.1;
   z-index: -1; }
 
+@media print {
+  #watermark-logo {
+    display: none; }
+  .scout-law {
+    display: none; } }
+
 .scout-law {
   color: #eee;
   position: fixed;
