--- a/app/styles.scss
+++ b/app/styles.scss
@@ -447,6 +447,9 @@ body {
     font-size: 3em;
     color: red;
     text-shadow: .01em .01em 0 #fff, .03em .03em 0 #aaa;
+    small {
+        font-size: .75em;
+    }
 }
 
 @media (min-width: 768px) {
@@ -460,16 +463,25 @@ body {
         .01em 3px 6px rgba(0,0,0,.25),
         .01em 4px 6px rgba(0,0,0,.2),
         .01em 5px 7px rgba(0,0,0,.15);
+    small {
+        font-size: 1em;
+    }
   }
 }
 @media (min-width: 992px) {
   .logo {
     font-size: 5em;
+    small {
+        font-size: 1.25em;
+    }
   }
 }
 @media (min-width: 1200px) {
   .logo {
     font-size: 6em;
+    small {
+        font-size: 1.5em;
+    }
   }
 }
 
