--- a/app/styles.scss
+++ b/app/styles.scss
@@ -447,7 +447,7 @@ body {
     font-size: 3em;
     color: red;
     text-shadow: .01em .01em 0 #fff, .03em .03em 0 #aaa;
-    small {
+    small.logo {
         font-size: .75em;
     }
 }
@@ -463,7 +463,7 @@ body {
         .01em 3px 6px rgba(0,0,0,.25),
         .01em 4px 6px rgba(0,0,0,.2),
         .01em 5px 7px rgba(0,0,0,.15);
-    small {
+    small.logo {
         font-size: 1em;
     }
   }
@@ -471,7 +471,7 @@ body {
 @media (min-width: 992px) {
   .logo {
     font-size: 5em;
-    small {
+    small.logo {
         font-size: 1.25em;
     }
   }
@@ -479,7 +479,7 @@ body {
 @media (min-width: 1200px) {
   .logo {
     font-size: 6em;
-    small {
+    small.logo {
         font-size: 1.5em;
     }
   }
