--- a/app/layout/header.html
+++ b/app/layout/header.html
@@ -4,7 +4,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <span class="logo"><small>www.</small>Troop 581<small> .us</small></span>
+                <span class="logo"><small>www.</small>Troop 581<small> .us</small><span class="pull-right fundraiser">Flag Service Fundraiser</span></span>
             </div>
         </div>
     </div>
