--- a/app/layout/shell.html
+++ b/app/layout/shell.html
@@ -1,4 +1,4 @@
 ﻿<div ng-controller="shell as vm">
-    <header ng-include="'app/layout/header.html'"></header>
+    <div ng-include="'app/layout/header.html'"></div>
     <div ng-view></div>
 </div>
