--- a/app/layout/shell.html
+++ b/app/layout/shell.html
@@ -9,5 +9,6 @@
                 </div>
             </div>
         </div>
-    </div>    <div ng-view></div>
+    </div>
+    <div ng-view></div>
 </div>
