--- a/app/styles.css
+++ b/app/styles.css
@@ -431,34 +431,36 @@ body {
   font-weight: 700;
   font-size: 3em;
   color: red;
-  text-shadow: 0.01em 0.01em 0 #fff, 0.03em 0.03em 0 #aaa; }
+  text-shadow: .01em .01em 0 #fff, .03em .03em 0 #aaa; }
 
 .logo small {
-  font-size: 0.5em; }
+  font-size: .5em; }
 
 @media (min-width: 768px) {
   .logo {
     font-size: 4em;
-    text-shadow: 0.01em 0.01em 0 #fff, 0.01em 0.02em 0 #aaa, 0.01em 6px 1px rgba(0, 0, 0, 0.1), 0.01em 0 5px rgba(0, 0, 0, 0.1), 0.01em 1px 3px rgba(0, 0, 0, 0.3), 0.01em 2px 5px rgba(0, 0, 0, 0.2), 0.01em 3px 6px rgba(0, 0, 0, 0.25), 0.01em 4px 6px rgba(0, 0, 0, 0.2), 0.01em 5px 7px rgba(0, 0, 0, 0.15); }
- }
+    text-shadow: 0.01em 0.01em 0 #fff, 0.01em 0.02em 0 #aaa, 0.01em 6px 1px rgba(0, 0, 0, 0.1), 0.01em 0 5px rgba(0, 0, 0, 0.1), 0.01em 1px 3px rgba(0, 0, 0, 0.3), 0.01em 2px 5px rgba(0, 0, 0, 0.2), 0.01em 3px 6px rgba(0, 0, 0, 0.25), 0.01em 4px 6px rgba(0, 0, 0, 0.2), 0.01em 5px 7px rgba(0, 0, 0, 0.15); } }
 
 @media (min-width: 992px) {
   .logo {
-    font-size: 5em; }
- }
+    font-size: 5em; } }
 
 @media (min-width: 1200px) {
   .logo {
-    font-size: 6em; }
- }
+    font-size: 6em; } }
 
 #watermark-logo {
   max-width: 30%;
   position: fixed;
   bottom: -10px;
   right: -10px;
-  opacity: 0.1;
+  opacity: .1;
   z-index: -1; }
+
+.badge-img {
+  position: absolute;
+  right: 15px;
+  opacity: .15; }
 
 .fundraiser {
   display: none; }
@@ -466,25 +468,19 @@ body {
 @media print {
   #watermark-logo {
     display: none; }
-
   .scout-law {
     display: none; }
-
   .logo {
     font-weight: 700;
     font-size: 3em;
     color: red;
     text-shadow: none; }
-
   .logo small {
-    font-size: 0.5em; }
-
+    font-size: .5em; }
   .fundraiser {
     display: block; }
-
   .holiday-text {
-    font-weight: 700; }
- }
+    font-weight: 700; } }
 
 .scout-law {
   color: #eee;
@@ -502,7 +498,7 @@ body {
     color: mediumblue;
     margin-bottom: 0;
     margin-top: 0;
-    text-indent: 0.5em; }
+    text-indent: .5em; }
   .holiday .holiday-date {
     text-indent: 1.5em;
     margin-bottom: 0;
@@ -531,8 +527,7 @@ hr {
 @media (min-width: 480px) {
   .modal-lg {
     width: 95%;
-    max-width: 1200px; }
- }
+    max-width: 1200px; } }
 
 .img-center {
   display: block;
@@ -558,7 +553,7 @@ blockquote {
   width: 50%; }
 
 #toast-container > .toast {
-  opacity: 0.95;
+  opacity: .95;
   background-image: none !important;
   padding-left: 15px;
   width: 350px;
@@ -595,9 +590,12 @@ blockquote {
 @media screen and (max-device-width: 767px) and (orientation: portrait) {
   .display-portrait {
     display: block !important; }
-
   .display-landscape {
-    display: none !important; }
- }
+    display: none !important; } }
 
-/*# sourceMappingURL=styles.css.map */
+.bold {
+  font-weight: bold; }
+
+.clickable {
+  cursor: pointer; }
+
