--- a/app/styles.scss
+++ b/app/styles.scss
@@ -479,11 +479,17 @@ body {
 
 #watermark-logo {
     max-width: 30%;
-    position:fixed;
+    position: fixed;
     bottom: -10px;
     right: -10px;
     opacity: .1;
     z-index: -1;
+}
+
+.badge-img {
+    position: absolute;
+    right: 15px;
+    opacity: .15;
 }
 
 .fundraiser {
@@ -657,4 +663,12 @@ blockquote {
     .display-landscape {
         display: none!important;
     }
+}
+
+.bold {
+    font-weight: bold;
+}
+
+.clickable {
+    cursor: pointer;
 }
