--- a/app/styles.css
+++ b/app/styles.css
@@ -599,3 +599,12 @@ blockquote {
 .clickable {
   cursor: pointer; }
 
+.badge-wrapper {
+  float: left;
+  width: 12em;
+  height: 12em; }
+  .badge-wrapper img {
+    height: 8em;
+    width: 8em;
+    margin-bottom: 1em; }
+
