--- a/app/styles.scss
+++ b/app/styles.scss
@@ -227,9 +227,9 @@ blockquote {
     font-weight: normal;
 }
 
-.toast-info {
-    background-color: lightskyblue;
-}
+// .toast-info {
+//     background-color: lightskyblue;
+// }
 
 .fa-cc-paypal {
     color: blue;
